# open-amplify-ai

./: .env.example  .gitignore  README.md  pyproject.toml  refactor.py  shell.nix  test_400.py
.clinerules/: development_rules.md  project_basics.md
.github/workflows/: build.yml
docs/: amplify_api_probed.md  amplify_api_reference.md  amplify_to_openai_response_mapping.md  openai_to_amplify_mapping.md
nix/: default.nix  module.nix  package.nix
src/amplify_ai/: __init__.py  cli.py  probe_api.py  server.py  test_server.py
src/open_amplify_ai/: auth.py  cli.py  config.py  middleware.py  probe_api.py  server.py  test_chat_client_integration.py  test_integration.py  test_server.py  types.py  utils.py
src/open_amplify_ai/routers/: __init__.py  assistants.py  chat.py  files.py  models.py  stubs.py  threads.py  vector_stores.py
tests/integration/live/: test_live_endpoints.py
tests/integration/mocked/: test_assistants.py  test_chat.py  test_files.py  test_threads.py  test_unsupported.py  test_vector_stores.py
tests/unit/: test_assistants.py  test_chat.py  test_files.py  test_models.py  test_strict_coverage.py  test_threads.py  test_vector_stores.py
